force-app/main/default/objects/MSTR_Fiscal_Table__c/MSTR_Fiscal_Table__c.object-meta.xml
<CustomObject>
    <label>MSTR Fiscal Table</label>
    <nameField>
        <displayFormat>MSTR-FID{00000}</displayFormat>
        <label>MSTR Fiscal Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSTR Fiscal Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>