force-app/main/default/objects/MSTR_Fiscal_Table__c/fields/Period_ID__c.field-meta.xml
<CustomField>
    <fullName>Period_ID__c</fullName>
    <label>Period ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>