force-app/main/default/objects/MSTR_Fiscal_Table__c/fields/Previous_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Period_End_Date__c</fullName>
    <label>Previous Period End Date</label>
    <type>Date</type>
</CustomField>