force-app/main/default/objects/MSTR_Fiscal_Table__c/fields/Previous_Quarter_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quarter_Name__c</fullName>
    <label>Previous Quarter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>