force-app/main/default/objects/MSTR_Fiscal_Table__c/fields/Previous_Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quarter_Number__c</fullName>
    <label>Previous Quarter Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>