force-app/main/default/objects/MSTR_Fiscal_Table__c/fields/Quarter_Name__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Name__c</fullName>
    <label>Quarter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>